// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectionResolver when a cursor is supplied when there are NO missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MTo6MQ==",
      },
    },
    {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mjo6MQ==",
      },
    },
    {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mzo6MQ==",
      },
    },
    {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NDo6MQ==",
      },
    },
    {
      "cursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NTo6MQ==",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "MTo6MQ==",
    },
    {
      "id": "Mjo6MQ==",
    },
    {
      "id": "Mzo6MQ==",
    },
    {
      "id": "NDo6MQ==",
    },
    {
      "id": "NTo6MQ==",
    },
  ],
  "pageInfo": {
    "endCursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when a cursor is supplied when there are missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MTo6MQ==",
      },
    },
    {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mjo6MQ==",
      },
    },
    {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mzo6MQ==",
      },
    },
    {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NDo6MQ==",
      },
    },
    {
      "cursor": "NTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NTo6MQ==",
      },
    },
    {
      "cursor": "Njo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Njo6MQ==",
      },
    },
    {
      "cursor": "Nzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Nzo6MQ==",
      },
    },
    {
      "cursor": "ODo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "ODo6MQ==",
      },
    },
    {
      "cursor": "OTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "OTo6MQ==",
      },
    },
    {
      "cursor": "TURvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MDo6Mg==",
      },
    },
    {
      "cursor": "TVRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MTo6Mg==",
      },
    },
    {
      "cursor": "TWpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mjo6Mg==",
      },
    },
    {
      "cursor": "TXpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mzo6Mg==",
      },
    },
    {
      "cursor": "TkRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NDo6Mg==",
      },
    },
    {
      "cursor": "TlRvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NTo6Mg==",
      },
    },
    {
      "cursor": "TmpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Njo6Mg==",
      },
    },
    {
      "cursor": "TnpvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Nzo6Mg==",
      },
    },
    {
      "cursor": "T0RvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "ODo6Mg==",
      },
    },
    {
      "cursor": "T1RvNk1nPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "OTo6Mg==",
      },
    },
    {
      "cursor": "MDo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MDo6Mw==",
      },
    },
    {
      "cursor": "MTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MTo6Mw==",
      },
    },
    {
      "cursor": "Mjo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mjo6Mw==",
      },
    },
    {
      "cursor": "Mzo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mzo6Mw==",
      },
    },
    {
      "cursor": "NDo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NDo6Mw==",
      },
    },
    {
      "cursor": "NTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NTo6Mw==",
      },
    },
    {
      "cursor": "Njo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Njo6Mw==",
      },
    },
    {
      "cursor": "Nzo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Nzo6Mw==",
      },
    },
    {
      "cursor": "ODo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "ODo6Mw==",
      },
    },
    {
      "cursor": "OTo6Mw==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "OTo6Mw==",
      },
    },
    {
      "cursor": "MDo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MDo6NA==",
      },
    },
    {
      "cursor": "MTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MTo6NA==",
      },
    },
    {
      "cursor": "Mjo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mjo6NA==",
      },
    },
    {
      "cursor": "Mzo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mzo6NA==",
      },
    },
    {
      "cursor": "NDo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NDo6NA==",
      },
    },
    {
      "cursor": "NTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NTo6NA==",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "MTo6MQ==",
    },
    {
      "id": "Mjo6MQ==",
    },
    {
      "id": "Mzo6MQ==",
    },
    {
      "id": "NDo6MQ==",
    },
    {
      "id": "NTo6MQ==",
    },
    {
      "id": "Njo6MQ==",
    },
    {
      "id": "Nzo6MQ==",
    },
    {
      "id": "ODo6MQ==",
    },
    {
      "id": "OTo6MQ==",
    },
    {
      "id": "MDo6Mg==",
    },
    {
      "id": "MTo6Mg==",
    },
    {
      "id": "Mjo6Mg==",
    },
    {
      "id": "Mzo6Mg==",
    },
    {
      "id": "NDo6Mg==",
    },
    {
      "id": "NTo6Mg==",
    },
    {
      "id": "Njo6Mg==",
    },
    {
      "id": "Nzo6Mg==",
    },
    {
      "id": "ODo6Mg==",
    },
    {
      "id": "OTo6Mg==",
    },
    {
      "id": "MDo6Mw==",
    },
    {
      "id": "MTo6Mw==",
    },
    {
      "id": "Mjo6Mw==",
    },
    {
      "id": "Mzo6Mw==",
    },
    {
      "id": "NDo6Mw==",
    },
    {
      "id": "NTo6Mw==",
    },
    {
      "id": "Njo6Mw==",
    },
    {
      "id": "Nzo6Mw==",
    },
    {
      "id": "ODo6Mw==",
    },
    {
      "id": "OTo6Mw==",
    },
    {
      "id": "MDo6NA==",
    },
    {
      "id": "MTo6NA==",
    },
    {
      "id": "Mjo6NA==",
    },
    {
      "id": "Mzo6NA==",
    },
    {
      "id": "NDo6NA==",
    },
    {
      "id": "NTo6NA==",
    },
  ],
  "pageInfo": {
    "endCursor": "NTo6NA==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the first [X] number are requested when there is NOT a fresh cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MDo6MQ==",
      },
    },
    {
      "cursor": "TVRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MTo6MQ==",
      },
    },
    {
      "cursor": "TWpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mjo6MQ==",
      },
    },
    {
      "cursor": "TXpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mzo6MQ==",
      },
    },
    {
      "cursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NDo6MQ==",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "MDo6MQ==",
    },
    {
      "id": "MTo6MQ==",
    },
    {
      "id": "Mjo6MQ==",
    },
    {
      "id": "Mzo6MQ==",
    },
    {
      "id": "NDo6MQ==",
    },
  ],
  "pageInfo": {
    "endCursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the first [X] number are requested when there is a fresh cache and there are NO missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "MDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MDo6MQ==",
      },
    },
    {
      "cursor": "MTo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "MTo6MQ==",
      },
    },
    {
      "cursor": "Mjo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mjo6MQ==",
      },
    },
    {
      "cursor": "Mzo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Mzo6MQ==",
      },
    },
    {
      "cursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NDo6MQ==",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "MDo6MQ==",
    },
    {
      "id": "MTo6MQ==",
    },
    {
      "id": "Mjo6MQ==",
    },
    {
      "id": "Mzo6MQ==",
    },
    {
      "id": "NDo6MQ==",
    },
  ],
  "pageInfo": {
    "endCursor": "NDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "MDo6MQ==::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the first [X] number are requested when there is a fresh cache and there are missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MDo6MQ==",
      },
    },
    {
      "cursor": "TVRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "MTo6MQ==",
      },
    },
    {
      "cursor": "TWpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mjo6MQ==",
      },
    },
    {
      "cursor": "TXpvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Mzo6MQ==",
      },
    },
    {
      "cursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NDo6MQ==",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "MDo6MQ==",
    },
    {
      "id": "MTo6MQ==",
    },
    {
      "id": "Mjo6MQ==",
    },
    {
      "id": "Mzo6MQ==",
    },
    {
      "id": "NDo6MQ==",
    },
  ],
  "pageInfo": {
    "endCursor": "TkRvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "TURvNk1RPT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the last [X] number are requested when there is NOT a fresh cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "TlRvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NTo6MTA=",
      },
    },
    {
      "cursor": "TmpvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Njo6MTA=",
      },
    },
    {
      "cursor": "TnpvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Nzo6MTA=",
      },
    },
    {
      "cursor": "T0RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "ODo6MTA=",
      },
    },
    {
      "cursor": "T1RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "OTo6MTA=",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "NTo6MTA=",
    },
    {
      "id": "Njo6MTA=",
    },
    {
      "id": "Nzo6MTA=",
    },
    {
      "id": "ODo6MTA=",
    },
    {
      "id": "OTo6MTA=",
    },
  ],
  "pageInfo": {
    "endCursor": "T1RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "TlRvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the last [X] number are requested when there is a fresh cache and there are NO missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "NTo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "NTo6MTA=",
      },
    },
    {
      "cursor": "Njo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Njo6MTA=",
      },
    },
    {
      "cursor": "Nzo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "Nzo6MTA=",
      },
    },
    {
      "cursor": "ODo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "ODo6MTA=",
      },
    },
    {
      "cursor": "OTo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
      "node": {
        "id": "OTo6MTA=",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "NTo6MTA=",
    },
    {
      "id": "Njo6MTA=",
    },
    {
      "id": "Nzo6MTA=",
    },
    {
      "id": "ODo6MTA=",
    },
    {
      "id": "OTo6MTA=",
    },
  ],
  "pageInfo": {
    "endCursor": "OTo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "NTo6MTA=::eyJxdWVyeSI6IkhlbGxvIHdvcmxkISJ9",
  },
  "totalCount": 100,
}
`;

exports[`connectionResolver when the last [X] number are requested when there is a fresh cache and there are missing pages in the cache should return the correct result 1`] = `
{
  "edges": [
    {
      "cursor": "TlRvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "NTo6MTA=",
      },
    },
    {
      "cursor": "TmpvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Njo6MTA=",
      },
    },
    {
      "cursor": "TnpvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "Nzo6MTA=",
      },
    },
    {
      "cursor": "T0RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "ODo6MTA=",
      },
    },
    {
      "cursor": "T1RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
      "node": {
        "id": "OTo6MTA=",
      },
    },
  ],
  "errors": [],
  "nodes": [
    {
      "id": "NTo6MTA=",
    },
    {
      "id": "Njo6MTA=",
    },
    {
      "id": "Nzo6MTA=",
    },
    {
      "id": "ODo6MTA=",
    },
    {
      "id": "OTo6MTA=",
    },
  ],
  "pageInfo": {
    "endCursor": "T1RvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "TlRvNk1UQT06OnsicXVlcnkiOiJIZWxsbyB3b3JsZCEifQ==",
  },
  "totalCount": 100,
}
`;
